--- a/public/css/shoppingHome.css
+++ b/public/css/shoppingHome.css
@@ -191,12 +191,13 @@ header {
 
 .pagination-controls{
   display: flex;
-  justify-content: end;
+  justify-content: center;
   gap: 8px;
 }
+
 /* Product Section */
 .section {
-  padding: 2rem 1rem;
+  /* padding: 2rem 1rem; */
   background-color: #f8f9fa;
 }
 
@@ -214,7 +215,8 @@ header {
  .product-card {
   background-color: #fff;
   width:105%;
-  margin: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
