--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,8 +11,10 @@
 <body>
     <header class="header">
     <div class="brand">
-      <img src="/test.jpg" alt="Brand Logo">
-      <span class="brand-name">ShoeZone</span>
+      <a class="navbar-brand nav-link" style="color: aliceblue;" href="/">
+        <img src="/test.jpg" alt="Brand Logo">
+        <span class="brand-name">ShoeZone</span>
+      </a>
     </div>
   </header>
     <div class="container  mt-5 ">
