--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -16,56 +16,56 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/test.jpg"  width="30" height="24" class="d-inline-block align-text-top">
-                SportZilon
-            </a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
-                            ADMIN
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
-                        </ul>
-                    </li>
+          <a class="navbar-brand" href="/admin">
+            <img src="/test.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            SportZilon
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  ADMIN
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
                 </ul>
-            </div>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>  
-    <main class="main">
+      </nav> 
+      <main class="main">
         <aside class="sidebar">
-            <div>
-                <div class="list-group sidebar-list" id="myListGroup">
-                    <a href="/admin">
-                        <button type="button" class="list-group-item list-group-item-action">HOME</button>
-                    </a>
-                    <a href="/admin/allproducts">
-                        <button type="button" class="list-group-item list-group-item-action">ALL PRODUCTS</button>
-                    </a>
-                    <a href="/admin/ordersList">
-                        <button type="button" class="list-group-item list-group-item-action">ORDERS LIST</button>
-                    </a>
-                    <a href="/admin/usersList">
-                        <button type="button" class="list-group-item list-group-item-action">USERS LIST</button>
-                    </a>
-                    <a href="/admin/categoryList">
-                        <button type="button" class="list-group-item list-group-item-action">CATEGORY LIST</button>
-                    </a>
-                    <a href="/admin/couponList">
-                        <button type="button" class="list-group-item list-group-item-action">COUPON LIST</button>
-                    </a>
-                    <a href="/admin/offers">
-                        <button type="button" class="list-group-item list-group-item-action">OFFERS</button>
-                    </a>
-                </div>
+          <div class="">
+            <div class="list-group sidebar-list" id="myListGroup">
+              <a href="/admin">
+                <button type="button" class="list-group-item list-group-item-action">HOME </button>
+              </a>
+              <a href="/admin/allproducts">
+                <button type="button" class="list-group-item list-group-item-action">ALL PRODUCTS</button>
+              </a>
+              <a href="/admin/ordersList">
+                <button type="button" class="list-group-item list-group-item-action">ORDERS LIST</button>
+              </a>
+              <a href="/admin/usersList">
+                <button type="button" class="list-group-item list-group-item-action">USERS LIST</button>
+              </a>
+              <a href="/admin/categoryList">
+                <button type="button" class="list-group-item list-group-item-action">CATEGORY LIST</button>
+              </a>
+              <a href="/admin/couponList">
+                <button type="button" class="list-group-item list-group-item-action">COUPON LIST</button>
+              </a>
+              <a href="/admin/offers">
+                <button type="button" class="list-group-item list-group-item-action">OFFERS</button>
+              </a>
             </div>
+          </div>
         </aside>
         <section class="content">
             <nav aria-label="breadcrumb">
