--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment"></script>
-    <link rel="stylesheet" href="/css/admindashboard.css">
+    <link rel="stylesheet" href="/css/adminDashboard.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
