--- a/views/admin/offers/editOffer.ejs
+++ b/views/admin/offers/editOffer.ejs
@@ -74,8 +74,7 @@
               <li class="breadcrumb-item active" aria-current="page">EDIT OFFER</li>
             </ol>
           </nav>
-    <div class="container mt-5">
-        <h1 class="mb-4">Edit Offer</h1>
+    <div class="container">
         <form id="offerForm" action="/admin/offers/edit/<%= offer._id %>" method="POST">
             <div class="form-group">
                 <label for="name">Name</label>
