--- a/views/admin/offers/offersList.ejs
+++ b/views/admin/offers/offersList.ejs
@@ -63,12 +63,10 @@
         <section class="content">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="/admin/offers">OFFERS LIST</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">EDIT OFFER</li>
+                  <li class="breadcrumb-item">OFFERS</li>
                 </ol>
               </nav>
-    <div class="container mt-5">
-        <h1 class="mb-4">Offers List</h1>
+    <div class="container">
         <a href="/admin/offers/add-offer" class="btn btn-primary mb-3">Add New Offer</a>
         <table class="table table-striped" id="myTable">
             <thead>
