--- a/views/admin/ordersList.ejs
+++ b/views/admin/ordersList.ejs
@@ -64,6 +64,11 @@
       </div>
     </aside>
     <section class="content">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">ORDERS LIST</li>
+        </ol>
+      </nav>
         <table class="table" id="myTable">
             <thead>
               <tr>
