--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -418,32 +418,31 @@ input::-webkit-inner-spin-button {
   margin-left: 10px;
 }
 
+@media (max-width: 576px) {
+  .navbar {
+    margin: 0;padding: 0;
+  }
+  .navbar-brand img {
+    width: 40px;
+    height: 40px;
+  }
+  
+  .brand-name {
+    font-size: 1rem;
+  }
+  
+  .user-actions i {
+    font-size: 1.2rem;
+  }
+  
+  .nav-category .nav-link {
+    font-size: 0.9rem;
+  }
+}
+
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .search-bar {
-    margin: 10px 0;
-    width: 100%;
-  }
-
-  .user-actions {
-    margin-top: 10px;
-  }
-
-  .banner {
-    text-align: left;
-  }
-
-  .banner form {
-    display: block;
-    margin-top: 10px;
-  }
-
-  .footer {
+   .footer {
     text-align: center;
   }
 
@@ -462,39 +461,7 @@ input::-webkit-inner-spin-button {
   }
 }
 
-@media screen and (max-width: 480px) {
-  .brand-logo {
-    flex-direction: column;
-    align-items: flex-start;
-  }
 
-  .brand-logo img {
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-
-  .search-bar form {
-    flex-direction: column;
-  }
-
-  .search-bar input[type="text"] {
-    border-radius: 4px;
-  }
-
-  .search-bar .dropdown-toggle {
-    border-radius: 4px;
-    margin-top: 10px;
-  }
-
-  .search-bar .search-btn {
-    border-radius: 4px;
-    margin-top: 10px;
-  }
-
-  .user-actions a {
-    font-size: 20px;
-  }
-}
 /* Responsive Styles */
 @media (max-width: 768px) {
   .cart-section {
