--- a/views/orders/orderDetails.ejs
+++ b/views/orders/orderDetails.ejs
@@ -44,7 +44,14 @@
                       <!-- <span class="me-3">Visa -1234</span> -->
                     </div>
                     <div class="invoice">
-                      <a href="#" data-bs-toggle="modal" data-bs-target="#invoiceModal">Invoice</a>
+                      <!-- <a href="#" data-bs-toggle="modal" data-bs-target="#invoiceModal">Invoice</a> -->
+                      <button type="button" class="btn btn-secondary btn-sm " data-bs-toggle="modal" data-bs-target="#invoiceModal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                          <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"></path>
+                          <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"></path>
+                        </svg>
+                        Invoice
+                      </button>
                     </div>
                   </div>
                   <table class="table table-borderless">
@@ -64,7 +71,7 @@
                         </td>
                         <td><%= item.quantity %></td>
                         <td class="text-end">₹<%= item.productId.price %></td>
-                        <td><span class="badge rounded-pill bg-info"><%= item.status %></span></td>
+                        <td>ORDER STATUS: <span class="badge rounded-pill bg-info"><%= item.status %></span></td>
                       </tr>
                       <% }) %>
                     </tbody>
@@ -105,7 +112,7 @@
                       <% } else if(order.paymentMethod === "online"  && order.paymentStatus === 'pending') { %>
                         
                         <span class="badge bg-success rounded-pill">PENDING</span></p>
-                        <button id="retry-payment" data-order-id = '<%= order._id %>'>Retry Payment</button>
+                        <button class="btn btn-secondary" id="retry-payment" data-order-id = '<%= order._id %>'>Retry Payment</button>
                       <% } %>
                     </div>
                     <div class="col-lg-6">
@@ -436,7 +443,24 @@
       });
 
     </script>
-
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        const sidebarToggle = document.getElementById("sidebarToggle");
+        const sidebar = document.querySelector(".sidebar");
+    
+        sidebarToggle.addEventListener("click", function(event) {
+          event.stopPropagation();
+          sidebar.classList.toggle("active");
+        });
+    
+        // Close sidebar when clicking outside
+        document.addEventListener("click", function(event) {
+          if (!sidebar.contains(event.target) && sidebar.classList.contains("active")) {
+            sidebar.classList.remove("active");
+          }
+        });
+      });
+    </script>
 
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
