--- a/public/css/resetPassword.css
+++ b/public/css/resetPassword.css
@@ -15,6 +15,7 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
+    height: 70vh;
     
 }
 
@@ -46,7 +47,7 @@ input {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #2d2e2d;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -55,5 +56,45 @@ button {
 }
 
 button:hover {
-    background-color: #3e8e41;
+    background-color: #000000;
 }
+
+/* Header */
+.header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .brand {
+    display: flex;
+    align-items: center;
+  }
+  
+  .brand img {
+    height: 50px;
+    margin-right: 10px;
+  }
+  
+  .brand-name {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .footer {
+    margin-top: 10px;
+    background-color: #f2f2f2; 
+    text-align: center;
+  }
+  
+  
+  
+  .copyright {
+    color: #333; 
+    font-size: 14px; 
+    padding-top: 2px;
+  }
+  
