--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="/css/resetPassword.css">
 </head>
 <body>
+  <header class="header">
+    <div class="brand">
+      <a class="navbar-brand nav-link" style="color: aliceblue;" href="/">
+        <img src="/test.jpg" alt="Brand Logo">
+        <span class="brand-name">ShoeZone</span>
+      </a>
+    </div>
+  </header>
     <div class="container  mt-5 ">
         <% if (message) { %>
          <%= message %>
@@ -25,6 +33,11 @@
                     <button type="submit" class="mb-2 mt-2" > Reset Password</button>
                   </form>
               </div>
+            </div>
+    </div>
+              <footer class="footer">
+                <p class="copyright">© 2024 ShoesZone.</p>
+            </footer>
 
               <script>
                
