--- a/views/includes/userHeader.ejs
+++ b/views/includes/userHeader.ejs
@@ -17,9 +17,9 @@
                 <a class="profile-dropdown-toggle nav-link btn" href="#" role="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fas fa-user"></i>
                 </a>
-                <div class="profile-dropdown-menu">
-                  <a class="dropdown-item nav-link" href="/profile">Profile</a>
-                  <a class="dropdown-item nav-link" href="/logout">Logout</a>
+                <div class="profile-dropdown-menu" style="background-color: rgb(0, 0, 0); color: white;">
+                  <a class="dropdown-item nav-link" style="color: #ffffff;" href="/profile">Profile</a>
+                  <a class="dropdown-item nav-link" style="color: #ffffff;" href="/logout">Logout</a>
                 </div>
               </div>
             <% } else { %>
