--- a/views/userSide/productSearch.ejs
+++ b/views/userSide/productSearch.ejs
@@ -27,13 +27,13 @@
       <input type="number" id="minPrice" class="form-control mb-2" placeholder="Min Price">
       <input type="number" id="maxPrice" class="form-control mb-3" placeholder="Max Price">
 
-      <h5>Brand</h5>
+      <!-- <h5>Brand</h5>
       <select id="brandFilter" class="form-select mb-3">
         <option value="">Select Brand</option>
         <option value="brand1">Brand 1</option>
         <option value="brand2">Brand 2</option>
         <option value="brand3">Brand 3</option>
-      </select>
+      </select> -->
 
       <button class="btn apply-filter-btn" id="applyFilters">Apply Filters</button>
       <button class="btn clear-filter-btn mt-2" id="clearFilters">Clear Filters</button>
