--- a/public/css/productDetails.css
+++ b/public/css/productDetails.css
@@ -214,7 +214,9 @@ header {
 .breadcrumb-item + .breadcrumb-item::before {
   content: ">";
 }
-
+#sidebarToggle {
+  display: none;
+}
 
 /* Product details styles */
 .product-details {
