--- a/views/auth/forgotPassword.ejs
+++ b/views/auth/forgotPassword.ejs
@@ -8,7 +8,14 @@
   <link rel="stylesheet" href="/css/verifyOtp.css">
 </head>
 <body>
-
+  <header class="header">
+    <div class="brand">
+      <a class="navbar-brand nav-link" style="color: aliceblue;" href="/">
+        <img src="/test.jpg" alt="Brand Logo">
+        <span class="brand-name">ShoeZone</span>
+      </a>
+    </div>
+  </header>
   <div class="container">
     <form class="otp-form" action="/forgot-password" method="post">
       <label for="email" class="form-label">Email</label>
@@ -18,9 +25,12 @@
           <%= message %>
         </div>
       <% } %>
-      <button type="submit" class="btn btn-primary">Proceed</button>
+      <button type="submit" class="btn btn-secondary">Proceed</button>
     </form>
   </div>
 
+  <footer class="footer">
+    <p class="copyright">© 2024 ShoesZone.</p>
+</footer>
   </body>
 </html>
