--- a/views/auth/resetPasswordVerifyOtp.ejs
+++ b/views/auth/resetPasswordVerifyOtp.ejs
@@ -8,7 +8,14 @@
   <link rel="stylesheet" href="/css/verifyOtp.css">
 </head>
 <body>
-
+  <header class="header">
+    <div class="brand">
+      <a class="navbar-brand nav-link" style="color: aliceblue;" href="/">
+        <img src="/test.jpg" alt="Brand Logo">
+        <span class="brand-name">ShoeZone</span>
+      </a>
+    </div>
+  </header>
   <div class="container">
     <form class="otp-form" action="/forgot-password-verify-otp" method="post">
       <label for="staticEmail" class="form-label">Email</label>
@@ -22,12 +29,15 @@
         </div>
       <% } %>
      
-      <button type="submit" class="btn btn-primary">Verify</button>
+      <button type="submit" class="btn btn-secondary">Verify</button>
       
       <p id="timer-container" class="mt-3"></p>
       <button id="resend-btn" class="btn btn-secondary" disabled>Resend OTP</button>
     </form>
   </div>
+  <footer class="footer">
+    <p class="copyright">© 2024 ShoesZone.</p>
+</footer>
 
   <!-- < % if (userData) { %> -->
   <!-- <form action="/verify-otp" method="post"> -->
