--- a/views/includes/userHeader.ejs
+++ b/views/includes/userHeader.ejs
@@ -33,7 +33,7 @@
         <!-- Second row: Search bar -->
         <div class="col-12 mb-2">
           <div class="search-bar">
-            <form action="/search" method="GET">
+            <form action="/products" method="GET">
               <div class="input-group">
                 <input type="text" name="query" class="form-control" placeholder="Search for products...">
                 <button type="submit" class="input-group-text search-btn">
@@ -55,9 +55,9 @@
                 CATEGORIES
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="/search?category=MEN">Men</a></li>
-                <li><a class="dropdown-item" href="/search?category=WOMEN">Women</a></li>
-                <li><a class="dropdown-item" href="/search?category=KIDS">Kids</a></li>
+                <li><a class="dropdown-item" href="/products?category=MEN">Men</a></li>
+                <li><a class="dropdown-item" href="/products?category=WOMEN">Women</a></li>
+                <li><a class="dropdown-item" href="/products?category=KIDS">Kids</a></li>
               </ul>
             </li>
           </ul>
